Update StudentControllerTest.java